# CMakeProject

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
tests/: CMakeLists.txt  test_mylib.cpp
